tests/ui/feature-gates/feature-gate-cfg-target-has-threads.rs
#[cfg(target_has_threads)]
//~^ ERROR `cfg(target_has_threads)` is experimental and subject to change
fn bar() {}

fn main() {}
